src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Latest_Web_Form_Fill_Stamp__c</fullName>
        <label>Latest Web Form Fill Stamp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Web_Form_Fill__c</fullName>
        <label>Latest Web Form Fill</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadApprovalCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LeadApprovalCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadApprovalStatus__c</fullName>
        <label>LeadApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Assign_APAC__c</fullName>
        <formula>CASE(UPPER(Country_for_Assignment_Rules__c),
&quot;CHINA&quot;,&quot;N&quot;,
&quot;JAPAN&quot;,&quot;Y&quot;,
&quot;AUSTRALIA&quot;,&quot;Y&quot;,
&quot;NEW ZEALAND&quot;,&quot;Y&quot;,
&quot;PHILIPPINES&quot;,&quot;Y&quot;,
&quot;RUSSIAN FEDERATION&quot;,&quot;Y&quot;,
&quot;THAILAND&quot;,&quot;Y&quot;,
&quot;VIETNAM&quot;,&quot;Y&quot;,
&quot;INDIA&quot;,&quot;Y&quot;,
&quot;SOUTH KOREA&quot;,&quot;Y&quot;,
&quot;KOREA&quot;,&quot;Y&quot;,
&quot;KOREA, REPUBLIC OF&quot;,&quot;Y&quot;,
&quot;UKRAINE&quot;,&quot;Y&quot;,
&quot;INDONESIA&quot;,&quot;Y&quot;,
&quot;SINGAPORE&quot;,&quot;Y&quot;,
&quot;TAIWAN&quot;,&quot;Y&quot;,
&quot;BANGLADESH&quot;,&quot;Y&quot;,
&quot;HONG KONG&quot;,&quot;Y&quot;,
&quot;MALAYSIA&quot;,&quot;Y&quot;,
&quot;N&quot;
)</formula>
        <label>Lead Assign (APAC)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_Central__c</fullName>
        <formula>CASE(UPPER(State_For_Assignment_Rules__c),
&quot;IL&quot;,&quot;N&quot;,
&quot;IN&quot;,&quot;N&quot;,
&quot;ILLINOIS&quot;,&quot;N&quot;,
&quot;INDIANA&quot;,&quot;N&quot;,
&quot;N&quot;)</formula>
        <label>zzzLead Assign (Central)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_EMEA_2__c</fullName>
        <description>African Countries 1</description>
        <formula>CASE(UPPER(Country_for_Assignment_Rules__c),
&quot;ALGERIA&quot;,&quot;Y&quot;,
&quot;ANGOLA&quot;,&quot;Y&quot;,
&quot;BENIN&quot;,&quot;Y&quot;,
&quot;BOTSWANA&quot;,&quot;Y&quot;,
&quot;BURKINA FASO&quot;,&quot;Y&quot;,
&quot;BURUNDI&quot;,&quot;Y&quot;,
&quot;CABO VERDE&quot;,&quot;Y&quot;,
&quot;CAMEROON&quot;,&quot;Y&quot;,
&quot;CENTRAL AFRICAN REPUBLIC&quot;,&quot;Y&quot;,
&quot;CHAD&quot;,&quot;Y&quot;,
&quot;COMOROS&quot;,&quot;Y&quot;,
&quot;REPUBLIC OF THE CONGO&quot;,&quot;Y&quot;,
&quot;DEMOCRATIC REPUBLIC OF THE CONGO&quot;,&quot;Y&quot;,
&quot;COTE D&apos;IVOIRE&quot;,&quot;Y&quot;,
&quot;DJIBOUTI&quot;,&quot;Y&quot;,
&quot;EGYPT&quot;,&quot;Y&quot;,
&quot;EQUATORIAL GUINEA&quot;,&quot;Y&quot;,
&quot;ERITREA&quot;,&quot;Y&quot;,
&quot;ETHIOPIA&quot;,&quot;Y&quot;,
&quot;GABON&quot;,&quot;Y&quot;,
&quot;GAMBIA&quot;,&quot;Y&quot;,
&quot;GHANA&quot;,&quot;Y&quot;,
&quot;GUINEA&quot;,&quot;Y&quot;,
&quot;GUINEA-BISSAU&quot;,&quot;Y&quot;,
&quot;KENYA&quot;,&quot;Y&quot;,
&quot;LESOTHO&quot;,&quot;Y&quot;,
&quot;LIBERIA&quot;,&quot;Y&quot;,
&quot;LIBYA&quot;,&quot;Y&quot;,
&quot;N&quot;)</formula>
        <label>Lead Assign (EMEA 2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_EMEA_3__c</fullName>
        <description>African Countries 2</description>
        <formula>CASE(UPPER(Country_for_Assignment_Rules__c),
&quot;MADAGASCAR&quot;,&quot;Y&quot;,
&quot;MALAWI&quot;,&quot;Y&quot;,
&quot;MALI&quot;,&quot;Y&quot;,
&quot;MAURITANIA&quot;,&quot;Y&quot;,
&quot;MAURITIUS&quot;,&quot;Y&quot;,
&quot;MOROCCO&quot;,&quot;Y&quot;,
&quot;MOZAMBIQUE&quot;,&quot;Y&quot;,
&quot;NAMIBIA&quot;,&quot;Y&quot;,
&quot;NIGER&quot;,&quot;Y&quot;,
&quot;NIGERIA&quot;,&quot;Y&quot;,
&quot;RWANDA&quot;,&quot;Y&quot;,
&quot;SAO TOME AND PRINCIPE&quot;,&quot;Y&quot;,
&quot;SENEGAL&quot;,&quot;Y&quot;,
&quot;SEYCHELLES&quot;,&quot;Y&quot;,
&quot;SIERRA LEONE&quot;,&quot;Y&quot;,
&quot;SOMALIA&quot;,&quot;Y&quot;,
&quot;SOUTH AFRICA&quot;,&quot;Y&quot;,
&quot;SOUTH SUDAN&quot;,&quot;Y&quot;,
&quot;SUDAN&quot;,&quot;Y&quot;,
&quot;SWAZILAND&quot;,&quot;Y&quot;,
&quot;TANZANIA&quot;,&quot;Y&quot;,
&quot;TOGO&quot;,&quot;Y&quot;,
&quot;TUNISIA&quot;,&quot;Y&quot;,
&quot;UGANDA&quot;,&quot;Y&quot;,
&quot;ZAMBIA&quot;,&quot;Y&quot;,
&quot;ZIMBABWE&quot;,&quot;Y&quot;,
&quot;N&quot;)</formula>
        <label>Lead Assign (EMEA 3)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_EMEA_4__c</fullName>
        <description>Eastern Europe Countries 1</description>
        <formula>CASE(UPPER(Country_for_Assignment_Rules__c),
&quot;ALBANIA&quot;,&quot;Y&quot;,
&quot;ANDORRA&quot;,&quot;Y&quot;,
&quot;ARMENIA&quot;,&quot;Y&quot;,
&quot;AUSTRIA&quot;,&quot;Y&quot;,
&quot;AZERBAIJAN&quot;,&quot;N&quot;,
&quot;BELARUS&quot;,&quot;Y&quot;,
&quot;BOSNIA AND HERZEGOVINA&quot;,&quot;Y&quot;,
&quot;BULGARIA&quot;,&quot;Y&quot;,
&quot;CROATIA&quot;,&quot;Y&quot;,
&quot;CYPRESS&quot;,&quot;Y&quot;,
&quot;CZECH REPUBLIC&quot;,&quot;Y&quot;,
&quot;ESTONIA&quot;,&quot;Y&quot;,
&quot;GEORGIA&quot;,&quot;Y&quot;,
&quot;HUNGARY&quot;,&quot;Y&quot;,
&quot;KAZAKHSTAN&quot;,&quot;N&quot;,
&quot;KOSOVO&quot;,&quot;Y&quot;,
&quot;LATVIA&quot;,&quot;Y&quot;,
&quot;LIECHENSTEIN&quot;,&quot;Y&quot;,
&quot;LITHUANIA&quot;,&quot;Y&quot;,
&quot;MACEDONIA&quot;,&quot;Y&quot;,
&quot;MALTA&quot;,&quot;Y&quot;,
&quot;MOLDOVA&quot;,&quot;Y&quot;,
&quot;MONACO&quot;,&quot;Y&quot;,
&quot;MONTENEGRO&quot;,&quot;Y&quot;,
&quot;N&quot;)</formula>
        <label>Lead Assign (EMEA 4)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_EMEA__c</fullName>
        <description>Western Europe countries Minus UK</description>
        <formula>CASE(UPPER(Country_for_Assignment_Rules__c),
&quot;UNITED KINGDOM&quot;,&quot;N&quot;,
&quot;SPAIN&quot;,&quot;Y&quot;,
&quot;PORTUGAL&quot;,&quot;Y&quot;,
&quot;SLOVENIA&quot;,&quot;Y&quot;,
&quot;FRANCE&quot;,&quot;N&quot;,
&quot;ICELAND&quot;,&quot;Y&quot;,
&quot;GREAT BRITAIN&quot;,&quot;N&quot;,
&quot;GERMANY&quot;,&quot;Y&quot;,
&quot;BELGIUM&quot;,&quot;Y&quot;,
&quot;EUROPE&quot;,&quot;Y&quot;,
&quot;POLAND&quot;,&quot;Y&quot;,
&quot;THE NETHERLANDS&quot;,&quot;Y&quot;,
&quot;NETHERLANDS&quot;,&quot;Y&quot;,
&quot;NEDERLANDS&quot;,&quot;Y&quot;,
&quot;LUXEMBOURG&quot;,&quot;Y&quot;,
&quot;SWITZERLAND&quot;,&quot;Y&quot;,
&quot;AUSTRIA&quot;,&quot;Y&quot;,
&quot;IRELAND&quot;,&quot;N&quot;,
&quot;ITALY&quot;,&quot;Y&quot;,
&quot;DENMARK&quot;,&quot;Y&quot;,
&quot;FINLAND&quot;,&quot;Y&quot;,
&quot;SWEDEN&quot;,&quot;Y&quot;,
&quot;NORWAY&quot;,&quot;Y&quot;,
&quot;SOUTH AFRICA&quot;,&quot;N&quot;,
&quot;ISRAEL&quot;,&quot;Y&quot;,
&quot;SCOTLAND&quot;,&quot;N&quot;,
&quot;ESTONIA&quot;,&quot;Y&quot;,
&quot;CROATIA&quot;,&quot;Y&quot;,
&quot;GREECE&quot;,&quot;Y&quot;,
&quot;N&quot;
)</formula>
        <label>Lead Assign (EMEA)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_Gulf_Coast__c</fullName>
        <formula>CASE(UPPER(State_For_Assignment_Rules__c),
&quot;AL&quot;,&quot;N&quot;,
&quot;AR&quot;,&quot;N&quot;,
&quot;DC&quot;,&quot;N&quot;,
&quot;DE&quot;,&quot;N&quot;,
&quot;FL&quot;,&quot;N&quot;,
&quot;IA&quot;,&quot;N&quot;,
&quot;KY&quot;,&quot;N&quot;,
&quot;LA&quot;,&quot;N&quot;,
&quot;MO&quot;,&quot;N&quot;,
&quot;MS&quot;,&quot;N&quot;,
&quot;NC&quot;,&quot;N&quot;,
&quot;OH&quot;,&quot;N&quot;,
&quot;TN&quot;,&quot;N&quot;,
&quot;VA&quot;,&quot;N&quot;,
&quot;WV&quot;,&quot;N&quot;,
&quot;ALABAMA&quot;,&quot;N&quot;,
&quot;ARKANSAS&quot;,&quot;N&quot;,
&quot;DISTRICT OF COLUMBIA&quot;,&quot;N&quot;,
&quot;DELAWARE&quot;,&quot;N&quot;,
&quot;FLORIDA&quot;,&quot;N&quot;,
&quot;IOWA&quot;,&quot;N&quot;,
&quot;KENTUCKY&quot;,&quot;N&quot;,
&quot;LOUISIANA&quot;,&quot;N&quot;,
&quot;MISSOURI&quot;,&quot;N&quot;,
&quot;MISSISSIPPI&quot;,&quot;N&quot;,
&quot;NORTH CAROLINA&quot;,&quot;N&quot;,
&quot;OHIO&quot;,&quot;N&quot;,
&quot;TENNESSEE&quot;,&quot;N&quot;,
&quot;VIRGINIA&quot;,&quot;N&quot;,
&quot;WEST VIRGINIA&quot;,&quot;N&quot;,
&quot;N&quot;)</formula>
        <label>zzzLead Assign Gulf Coast</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_In_USCan_State__c</fullName>
        <description>Not used anymore in Assignment Rules. DF 12/9/2013.</description>
        <formula>CASE(  State  ,
&quot;IL&quot;,&quot;Y&quot;,
&quot;IN&quot;,&quot;Y&quot;,
&quot;IA&quot;,&quot;Y&quot;,
&quot;KS&quot;,&quot;Y&quot;,
&quot;MB&quot;,&quot;Y&quot;,
&quot;MI&quot;,&quot;Y&quot;,
&quot;MN&quot;,&quot;Y&quot;,
&quot;MO&quot;,&quot;Y&quot;,
&quot;NE&quot;,&quot;Y&quot;,
&quot;ND&quot;,&quot;Y&quot;,
&quot;NU&quot;,&quot;Y&quot;,
&quot;OH&quot;,&quot;Y&quot;,
&quot;OK&quot;,&quot;Y&quot;,
&quot;ON&quot;,&quot;Y&quot;,
&quot;SD&quot;,&quot;Y&quot;,
&quot;WI&quot;,&quot;Y&quot;,
&quot;CT&quot;,&quot;Y&quot;,
&quot;ME&quot;,&quot;Y&quot;,
&quot;MA&quot;,&quot;Y&quot;,
&quot;NB&quot;,&quot;Y&quot;,
&quot;NH&quot;,&quot;Y&quot;,
&quot;NJ&quot;,&quot;Y&quot;,
&quot;NY&quot;,&quot;Y&quot;,
&quot;NF&quot;,&quot;Y&quot;,
&quot;NS&quot;,&quot;Y&quot;,
&quot;PA&quot;,&quot;Y&quot;,
&quot;PE&quot;,&quot;Y&quot;,
&quot;QC&quot;,&quot;Y&quot;,
&quot;RI&quot;,&quot;Y&quot;,
&quot;VT&quot;,&quot;Y&quot;,
&quot;AL&quot;,&quot;Y&quot;,
&quot;AR&quot;,&quot;Y&quot;,
&quot;DE&quot;,&quot;Y&quot;,
&quot;DC&quot;,&quot;Y&quot;,
&quot;FL&quot;,&quot;Y&quot;,
&quot;GA&quot;,&quot;Y&quot;,
&quot;KY&quot;,&quot;Y&quot;,
&quot;LA&quot;,&quot;Y&quot;,
&quot;MD&quot;,&quot;Y&quot;,
&quot;MS&quot;,&quot;Y&quot;,
&quot;NC&quot;,&quot;Y&quot;,
&quot;PR&quot;,&quot;Y&quot;,
&quot;SC&quot;,&quot;Y&quot;,
&quot;TN&quot;,&quot;Y&quot;,
&quot;VA&quot;,&quot;Y&quot;,
&quot;WV&quot;,&quot;Y&quot;,
&quot;AK&quot;,&quot;Y&quot;,
&quot;AB&quot;,&quot;Y&quot;,
&quot;AZ&quot;,&quot;Y&quot;,
&quot;BC&quot;,&quot;Y&quot;,
&quot;CA&quot;,&quot;Y&quot;,
&quot;CO&quot;,&quot;Y&quot;,
&quot;HI&quot;,&quot;Y&quot;,
&quot;ID&quot;,&quot;Y&quot;,
&quot;MT&quot;,&quot;Y&quot;,
&quot;NV&quot;,&quot;Y&quot;,
&quot;NM&quot;,&quot;Y&quot;,
&quot;NT&quot;,&quot;Y&quot;,
&quot;OR&quot;,&quot;Y&quot;,
&quot;SK&quot;,&quot;Y&quot;,
&quot;TX&quot;,&quot;Y&quot;,
&quot;UT&quot;,&quot;Y&quot;,
&quot;WA&quot;,&quot;Y&quot;,
&quot;WY&quot;,&quot;Y&quot;,
&quot;YT&quot;,&quot;Y&quot;,
&quot;N&quot;)</formula>
        <label>Lead Assign (In US/Can State)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_North_East_2__c</fullName>
        <formula>CASE(UPPER(State_For_Assignment_Rules__c), 
&quot;PA&quot;,&quot;Y&quot;,
&quot;OH&quot;,&quot;Y&quot;, 
&quot;KY&quot;, &quot;Y&quot;,
&quot;IN&quot;, &quot;Y&quot;,
&quot;DE&quot;,&quot;Y&quot;,
&quot;PENNSYLVANIA&quot;,&quot;Y&quot;,
&quot;OHIO&quot;,&quot;Y&quot;,
&quot;KENTUCKY&quot;,&quot;Y&quot;,
&quot;INDIANA&quot;,&quot;Y&quot;,
&quot;DELAWARE&quot;,&quot;Y&quot;,
&quot;N&quot;)</formula>
        <label>Lead Assign (North East 2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_North_East_3__c</fullName>
        <formula>CASE(UPPER(State_For_Assignment_Rules__c), 
&quot;AL&quot;,&quot;Y&quot;, 
&quot;AR&quot;,&quot;Y&quot;, 
&quot;DC&quot;,&quot;Y&quot;, 
&quot;FL&quot;,&quot;Y&quot;,
&quot;GA&quot;,&quot;Y&quot;,
&quot;MD&quot;,&quot;Y&quot;, 
&quot;MS&quot;,&quot;Y&quot;, 
&quot;NC&quot;,&quot;Y&quot;,
&quot;SC&quot;,&quot;Y&quot;, 
&quot;TN&quot;,&quot;Y&quot;, 
&quot;VA&quot;,&quot;Y&quot;, 
&quot;WV&quot;,&quot;Y&quot;, 
&quot;ALABAMA&quot;,&quot;Y&quot;, 
&quot;ARKANSAS&quot;,&quot;Y&quot;, 
&quot;DISTRICT OF COLUMBIA&quot;,&quot;Y&quot;, 
&quot;FLORIDA&quot;,&quot;Y&quot;,
&quot;GEORGIA&quot;,&quot;Y&quot;,
&quot;MARYLAND&quot;,&quot;Y&quot;, 
&quot;MISSISSIPPI&quot;,&quot;Y&quot;, 
&quot;NORTH CAROLINA&quot;,&quot;Y&quot;, 
&quot;SOUTH CAROLINA&quot;,&quot;Y&quot;,
&quot;TENNESSEE&quot;,&quot;Y&quot;, 
&quot;VIRGINIA&quot;,&quot;Y&quot;, 
&quot;WEST VIRGINIA&quot;,&quot;Y&quot;, 
&quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assign (North East 3)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_North_East__c</fullName>
        <formula>CASE(UPPER(State_For_Assignment_Rules__c),
&quot;NY&quot;,&quot;Y&quot;,
&quot;NJ&quot;,&quot;Y&quot;,
&quot;ON&quot;,&quot;Y&quot;,
&quot;NB&quot;,&quot;Y&quot;,
&quot;NL&quot;,&quot;Y&quot;,
&quot;NS&quot;,&quot;Y&quot;,
&quot;PE&quot;,&quot;Y&quot;,
&quot;QC&quot;,&quot;Y&quot;,
&quot;CT&quot;,&quot;Y&quot;,
&quot;MA&quot;,&quot;Y&quot;,
&quot;ME&quot;,&quot;Y&quot;,
&quot;RI&quot;,&quot;Y&quot;,
&quot;VT&quot;,&quot;Y&quot;,
&quot;NH&quot;,&quot;Y&quot;,
&quot;NEW YORK&quot;,&quot;Y&quot;,
&quot;NEW JERSEY&quot;,&quot;Y&quot;,
&quot;ONTARIO&quot;,&quot;Y&quot;,
&quot;QUEBEC&quot;,&quot;Y&quot;,
&quot;NEW BRUNSWICK&quot;,&quot;Y&quot;,
&quot;NEWFOUNDLAND&quot;,&quot;Y&quot;,
&quot;NOVA SCOTIA&quot;,&quot;Y&quot;,
&quot;PRINCE EDWARDS ISLAND&quot;,&quot;Y&quot;,
&quot;CONNECTICUT&quot;,&quot;Y&quot;,
&quot;MASSACHUSETTS&quot;,&quot;Y&quot;,
&quot;MAINE&quot;,&quot;Y&quot;,
&quot;RHOSE ISLAND&quot;,&quot;Y&quot;,
&quot;VERMONT&quot;,&quot;Y&quot;,
&quot;NEW HAMPSHIRE&quot;,&quot;Y&quot;,
&quot;N&quot;)</formula>
        <label>Lead Assign (North East 1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_Other_Americas__c</fullName>
        <formula>CASE(UPPER(  Country_for_Assignment_Rules__c ),
&quot;ARGENTINA&quot;,&quot;Y&quot;,
&quot;BELIZE&quot;,&quot;Y&quot;,
&quot;BOLIVIA&quot;,&quot;Y&quot;,
&quot;BRASIL&quot;,&quot;Y&quot;,
&quot;BRAZIL&quot;,&quot;Y&quot;,
&quot;CHILE&quot;,&quot;Y&quot;,
&quot;COLOMBIA&quot;,&quot;Y&quot;,
&quot;COSTA RICA&quot;,&quot;Y&quot;,
&quot;CUBA&quot;,&quot;Y&quot;,
&quot;DOMINICA&quot;,&quot;Y&quot;,
&quot;DOMINICAN REPUBLIC&quot;,&quot;Y&quot;,
&quot;ECUADOR&quot;,&quot;Y&quot;,
&quot;EL SALVADOR&quot;,&quot;Y&quot;,
&quot;GUATEMALA&quot;,&quot;Y&quot;,
&quot;GUYANA&quot;,&quot;Y&quot;,
&quot;HAITI&quot;,&quot;Y&quot;,
&quot;HONDURAS&quot;,&quot;Y&quot;,
&quot;JAMAICA&quot;,&quot;Y&quot;,
&quot;MEXICO&quot;,&quot;Y&quot;,
&quot;NICARAGUA&quot;,&quot;Y&quot;,
&quot;PANAMA&quot;,&quot;Y&quot;,
&quot;PARAGUAY&quot;,&quot;Y&quot;,
&quot;PERU&quot;,&quot;Y&quot;,
&quot;SURINAME&quot;,&quot;Y&quot;,
&quot;URUGUAY&quot;,&quot;Y&quot;,
&quot;VENEZUELA&quot;,&quot;Y&quot;,
&quot;N&quot;)</formula>
        <label>Lead Assign (Other Americas)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_RR_ANZ__c</fullName>
        <formula>6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assign RR (ANZ)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_RR_Call_Blitz__c</fullName>
        <formula>MOD(VALUE(Lead_number__c),2)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assign RR (Call Blitz)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_RR_Central_Gen__c</fullName>
        <formula>MOD(VALUE(Lead_number__c),3) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assign RR (Central Gen)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_RR_Central__c</fullName>
        <formula>8</formula>
        <label>Lead Assign RR (Central)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_RR_EMEA__c</fullName>
        <formula>2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assign RR (EMEA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_RR_Generalist__c</fullName>
        <formula>MOD(VALUE(Lead_number__c),8) + 1</formula>
        <label>Lead Assign RR Generalist</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_RR_North_East_Gen__c</fullName>
        <formula>MOD(VALUE(Lead_number__c),3) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assign RR (North East Gen)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_RR_North_East__c</fullName>
        <formula>10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assign RR (North East)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_RR_Other_Americas__c</fullName>
        <formula>MOD(VALUE(Lead_number__c),14) + 1</formula>
        <label>Lead Assign RR (Other Americas)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_RR_Region__c</fullName>
        <formula>MOD(VALUE(Lead_number__c),3)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assign RR Region</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_RR_South_East__c</fullName>
        <formula>MOD(VALUE(Lead_number__c),23) + 1</formula>
        <label>Lead Assign RR (South East)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_RR_UK__c</fullName>
        <formula>2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assign RR (UK)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_RR_US_CA__c</fullName>
        <formula>19</formula>
        <label>Lead Assign RR Inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_RR_West_Gen__c</fullName>
        <formula>MOD(VALUE(Lead_number__c),2) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assign RR (West Gen)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_RR_West__c</fullName>
        <formula>9</formula>
        <label>Lead Assign RR (West)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_South_East__c</fullName>
        <formula>CASE(Upper(State_For_Assignment_Rules__c),
&quot;GEORGIA&quot;,&quot;N&quot;,
&quot;SOUTH CAROLINA&quot;,&quot;N&quot;,
&quot;PUERTO RICO&quot;,&quot;N&quot;,
&quot;GA&quot;,&quot;N&quot;,
&quot;SC&quot;,&quot;N&quot;,
&quot;PR&quot;,&quot;N&quot;,
&quot;N&quot;)</formula>
        <label>zzzLead Assign (South East)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_UK__c</fullName>
        <description>UK Countries for Lead Assign</description>
        <formula>CASE(UPPER(Country_for_Assignment_Rules__c), 
&quot;UNITED KINGDOM&quot;,&quot;Y&quot;, 
&quot;GREAT BRITAIN&quot;,&quot;Y&quot;,
&quot;IRELAND&quot;,&quot;Y&quot;, 
&quot;SOUTH AFRICA&quot;,&quot;Y&quot;,
&quot;SCOTLAND&quot;,&quot;Y&quot;,
&quot;N&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assign (UK)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_West_2__c</fullName>
        <formula>CASE(UPPER(State_For_Assignment_Rules__c),
&quot;TX&quot;,&quot;Y&quot;,
&quot;OK&quot;,&quot;Y&quot;, 
&quot;LA&quot;,&quot;Y&quot;,
&quot;NM&quot;,&quot;Y&quot;,
&quot;CO&quot;,&quot;Y&quot;,
&quot;UT&quot;,&quot;Y&quot;,
&quot;TEXAS&quot;,&quot;Y&quot;,
&quot;OKLAHOMA&quot;,&quot;Y&quot;, 
&quot;LOUISIANA&quot;,&quot;Y&quot;,
&quot;NEW MEXICO&quot;,&quot;Y&quot;,
&quot;COLORADO&quot;,&quot;Y&quot;,
&quot;UTAH&quot;,&quot;Y&quot;,
&quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assign (West 2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_West_3__c</fullName>
        <formula>CASE(UPPER(State_For_Assignment_Rules__c),
&quot;HAWAII&quot;,&quot;Y&quot;,
&quot;IDAHO&quot;,&quot;Y&quot;,
&quot;OREGON&quot;,&quot;Y&quot;,
&quot;WASHINGTON&quot;,&quot;Y&quot;,
&quot;BRITISH COLUMBIA&quot;,&quot;Y&quot;,
&quot;ALBERTA&quot;,&quot;Y&quot;,
&quot;SASKATCHEWAN&quot;,&quot;Y&quot;,
&quot;YUKON TERRITORY&quot;,&quot;Y&quot;,
&quot;MANITOBA&quot;,&quot;Y&quot;,
&quot;CALIFORNIA&quot;,&quot;Y&quot;,
&quot;ALASKA&quot;,&quot;Y&quot;,
&quot;ARIZONA&quot;,&quot;Y&quot;,
&quot;NEVADA&quot;,&quot;Y&quot;,
&quot;HI&quot;,&quot;Y&quot;,
&quot;ID&quot;,&quot;Y&quot;,
&quot;OR&quot;,&quot;Y&quot;,
&quot;WA&quot;,&quot;Y&quot;,
&quot;BC&quot;,&quot;Y&quot;,
&quot;AB&quot;,&quot;Y&quot;,
&quot;SK&quot;,&quot;Y&quot;,
&quot;YT&quot;,&quot;Y&quot;,
&quot;MB&quot;,&quot;Y&quot;,
&quot;CA&quot;,&quot;Y&quot;,
&quot;AK&quot;,&quot;Y&quot;,
&quot;AZ&quot;,&quot;Y&quot;,
&quot;NV&quot;,&quot;Y&quot;,
&quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assign (West 3)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assign_West__c</fullName>
        <description>The Wild West</description>
        <formula>CASE(UPPER(State_For_Assignment_Rules__c),
&quot;IL&quot;,&quot;Y&quot;,
&quot;IA&quot;,&quot;Y&quot;,
&quot;MO&quot;,&quot;Y&quot;,
&quot;MI&quot;,&quot;Y&quot;,
&quot;MN&quot;,&quot;Y&quot;,
&quot;WI&quot;,&quot;Y&quot;,
&quot;KS&quot;,&quot;Y&quot;,
&quot;MT&quot;,&quot;Y&quot;,
&quot;NE&quot;,&quot;Y&quot;,
&quot;ND&quot;,&quot;Y&quot;,
&quot;SD&quot;,&quot;Y&quot;,
&quot;WY&quot;,&quot;Y&quot;,
&quot;ILLINOIS&quot;,&quot;Y&quot;,
&quot;IOWA&quot;,&quot;Y&quot;,
&quot;MISSOURI&quot;,&quot;Y&quot;,
&quot;MICHIGAN&quot;,&quot;Y&quot;,
&quot;MINNESOTA&quot;,&quot;Y&quot;,
&quot;WISCONSIN&quot;,&quot;Y&quot;,
&quot;KANSAS&quot;,&quot;Y&quot;,
&quot;MONTANA&quot;,&quot;Y&quot;,
&quot;NEBRASKA&quot;,&quot;Y&quot;,
&quot;NORTH DAKOTA&quot;,&quot;Y&quot;,
&quot;SOUTH DAKOTA&quot;,&quot;Y&quot;,
&quot;WYOMING&quot;,&quot;Y&quot;,
&quot;N&quot;)</formula>
        <label>Lead Assign (West 1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_CreatedDate__c</fullName>
        <description>transfers to contact field on lead convert - stamped cohort</description>
        <formula>CreatedDate</formula>
        <label>Lead CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Details__c</fullName>
        <label>Lead Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Gen_Source__c</fullName>
        <formula>IF(AND(OR(ISPICKVAL(LeadSource, &apos;Inbound - Product Download&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Other&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Webinar&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Website&apos;)), 
OR(bizible__Medium__r.Name = &quot;banner-ad&quot;, bizible__Medium__r.Name = &quot;cpmdisplay&quot;,bizible__Medium__r.Name = &quot;cpmdisplay&quot;,bizible__Medium__r.Name = &quot;ppcdisplay&quot;,bizible__Medium__r.Name = &quot;sponsored-email&quot;, 
AND(bizible__Medium__r.Name = &quot;CPC&quot;, LEFT(bizible__AdWords_Campaign__r.Name,3)= &quot;DNC&quot;))),&quot;Advertising&quot;, 
IF(AND(OR(ISPICKVAL(LeadSource, &apos;Inbound - Product Download&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Other&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Webinar&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Website&apos;)), 
OR(bizible__Medium__r.Name = &quot;ppcsearch&quot;, 
AND(bizible__Medium__r.Name = &quot;CPC&quot;, NOT(LEFT(bizible__AdWords_Campaign__r.Name,3)= &quot;DNC&quot;)))),&quot;Paid Search&quot;, 
IF(AND(OR(ISPICKVAL(LeadSource, &apos;Inbound - Product Download&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Other&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Webinar&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Website&apos;)),bizible__Medium__r.Name = &quot;Search&quot;),&quot;Organic&quot;, 
IF(AND(OR(ISPICKVAL(LeadSource, &apos;Inbound - Product Download&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Other&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Webinar&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Website&apos;)),bizible__Medium__r.Name = &quot;Web&quot;),&quot;Direct&quot;, 
IF(ISPICKVAL(LeadSource, &apos;Tradeshow&apos;), &quot;Tradeshow&quot;, 
IF(ISPICKVAL(LeadSource,&apos;Third Party&apos;),&quot;Third Party&quot;,  
IF(AND(OR(ISPICKVAL(LeadSource, &apos;Inbound - Product Download&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Other&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Webinar&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Website&apos;)), 
OR(bizible__Medium__r.Name = &quot;social&quot;,bizible__Medium__r.Name = &quot;twitter&quot;,bizible__Medium__r.Name = &quot;facebook&quot;)),&quot;Social&quot;,
IF(AND(OR(ISPICKVAL(LeadSource, &apos;Inbound - Product Download&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Other&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Webinar&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Website&apos;)), 
bizible__Medium__r.Name = &quot;&quot;),&quot;Inbound- No Biz&quot;,&quot;&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Gen Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Manager_Email__c</fullName>
        <label>Lead Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Manager__c</fullName>
        <formula>Territory_Owner_Lead__r.Manager.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Nurture_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Nurture opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Opp_Dup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WI Partner Deal reg opportunity dup</description>
        <label>Partner (Dup)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_ID__c</fullName>
        <formula>Owner:User.User_Safe_ID__c</formula>
        <label>Lead Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_static__c</fullName>
        <label>Lead Owner (static)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_text2__c</fullName>
        <formula>Owner:User.Full_Name__c</formula>
        <label>Lead Owner (text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Referal_Name__c</fullName>
        <label>Referred By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Region_Country_1__c</fullName>
        <label>Lead Region (Country 1)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Region_Country_2__c</fullName>
        <label>Lead Region (Country 2)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Region_State__c</fullName>
        <label>Lead Region (State)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Region__c</fullName>
        <formula>IF(AND(State_For_Assignment_Rules__c=&quot;&quot;,Country_for_Assignment_Rules__c=&quot;&quot;),&quot;&quot;, 
IF(AND(Lead_Region_State__c&lt;&gt;&quot;&quot;,OR(UPPER(Country_for_Assignment_Rules__c)=&quot;UNITED STATES&quot;, UPPER(SUBSTITUTE(Country_for_Assignment_Rules__c,&quot;.&quot;,&quot;&quot;))=&quot;USA&quot;,UPPER(SUBSTITUTE(Country_for_Assignment_Rules__c,&quot;.&quot;,&quot;&quot;))=&quot;US&quot;, UPPER(Country_for_Assignment_Rules__c)=&quot;AMERICA&quot;,Country_for_Assignment_Rules__c=&quot;&quot;)),Lead_Region_State__c, 
IF(Lead_Region_Country_1__c&lt;&gt;&quot;&quot;,Lead_Region_Country_1__c,
IF(Lead_Region_Country_2__c&lt;&gt;&quot;&quot;,Lead_Region_Country_2__c,
&quot;(no match)&quot;))))</formula>
        <label>Lead Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Lead Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Modified__c</fullName>
        <description>the last time the lad score was modified in the system</description>
        <label>Lead Score Modified:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Category__c</fullName>
        <formula>IF(TEXT(LeadSource)=&quot;Maintenance Renewal&quot;,&quot;Maintenance&quot;,
CASE(LEFT(TEXT(LeadSource),4), 
&quot;CCL:&quot;, &quot;List Buy&quot;,
&quot;CHN:&quot;, &quot;Channel&quot;,
&quot;DIR:&quot;, &quot;Inbound Marketing&quot;,
&quot;INB:&quot;, &quot;Inbound Marketing&quot;,
&quot;RFL:&quot;, &quot;Referral&quot;,
&quot;TSE:&quot;, &quot;Tradeshows &amp; Events&quot;,
&quot;SOM:&quot;, &quot;Social Media&quot;,
&quot;OEV:&quot;, &quot;Online Events&quot;,
&quot;TGL:&quot;, &quot;List Buy&quot;,
&quot;PRO:&quot;, &quot;Prospecting&quot;,
&quot;3PT:&quot;, &quot;Third Party&quot;,
&quot;WEB:&quot;, &quot;Inbound Marketing&quot;,
&quot;OTH:&quot;, &quot;Other&quot;,
&quot;UNK:&quot;, &quot;Unknown&quot;,
&quot;RNL:&quot;, &quot;Renewal&quot;,
&quot;BD: &quot;, &quot;Business Development&quot;,
&quot;Unknown&quot;))</formula>
        <label>Lead Source Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_text_format__c</fullName>
        <description>For lead assignment rules (they don&apos;t let you use the TEXT function, so this is a workaround</description>
        <formula>TEXT(LeadSource)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source (text format)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead TypeDELETE?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enduser</fullName>
                    <default>true</default>
                    <label>Enduser</label>
                </value>
                <value>
                    <fullName>Analyst / Press</fullName>
                </value>
                <value>
                    <fullName>Blogger / Editor</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Consulting Partner</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Velocity_Geo_Area__c</fullName>
        <formula>IF(OR(UPPER( Country_for_Assignment_Rules__c )=&quot;UNITED STATES&quot;,UPPER(Country_for_Assignment_Rules__c)=&quot;CANADA&quot;,NOT(ISBLANK(Velocity_Area_Domestic__c))),Velocity_Area_Domestic__c,Velocity_Area_International__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Velocity Geo Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Lead_number</label>
        <type>AutoNumber</type>
    </fields>
</CustomObject>